--- a/main.css
+++ b/main.css
@@ -1,9 +1,9 @@
 /* Variables */
 :root {
 	--primary: #EA40A4;
-	--business: #3a82ee;
-	--personal: var(--primary);
-	--recreation: #ddd111;
+	--high: #3a82ee;
+	--medium: var(--primary);
+	--low: #ddd111;
 	--light: #EEE;
 	--grey: #888;
 	--dark: #313154;
@@ -11,9 +11,9 @@
 
 	--shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 
-	--business-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
-	--personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
-	--recreation-glow: 0px 0px 4px rgba(147, 41, 192, 0.75);
+	--high-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
+	--medium-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
+	--low-glow: 0px 0px 4px rgba(147, 41, 192, 0.75);
 }
 /* End of Variables */
 
@@ -120,18 +120,18 @@ input[type="checkbox"] {
 	width: 20px;
 	height: 20px;
 	border-radius: 999px;
-	border: 2px solid var(--business);
-	box-shadow: var(--business-glow);
+	border: 2px solid var(--high);
+	box-shadow: var(--high-glow);
 }
 
-.bubble.personal {
-	border-color: var(--personal);
-	box-shadow: var(--personal-glow);
+.bubble.medium {
+	border-color: var(--medium);
+	box-shadow: var(--medium-glow);
 }
 
-.bubble.recreation {
-	border-color: var(--recreation);
-	box-shadow: var(--recreation-glow);
+.bubble.low {
+	border-color: var(--low);
+	box-shadow: var(--low-glow);
 }
 
 .bubble::after {
@@ -140,20 +140,20 @@ input[type="checkbox"] {
 	opacity: 0;
 	width: 0px;
 	height: 0px;
-	background-color: var(--business);
-	box-shadow: var(--business-glow);
+	background-color: var(--high);
+	box-shadow: var(--high-glow);
 	border-radius: 999px;
 	transition: 0.2s ease-in-out;
 }
 
-.bubble.personal::after {
-	background-color: var(--personal);
-	box-shadow: var(--personal-glow);
+.bubble.medium::after {
+	background-color: var(--medium);
+	box-shadow: var(--medium-glow);
 }
 
-.bubble.recreation::after {
-	background-color: var(--recreation);
-	box-shadow: var(--recreation-glow);
+.bubble.low::after {
+	background-color: var(--low);
+	box-shadow: var(--low-glow);
 }
 
 input:checked ~ .bubble::after {
@@ -177,7 +177,7 @@ input:checked ~ .bubble::after {
 	font-weight: 700;
 	text-transform: uppercase;
 	background-color: var(--primary);
-	box-shadow: var(--personal-glow);
+	box-shadow: var(--medium-glow);
 	border-radius: 0.5rem;
 	cursor: pointer;
 	transition: 0.2s ease-out;
